--- a/_themes/sphinx_bootstrap_theme/navbar.html
+++ b/_themes/sphinx_bootstrap_theme/navbar.html
@@ -17,32 +17,9 @@
 
         <div class="collapse navbar-collapse nav-collapse">
           <ul class="nav navbar-nav">
-            {% block navbartoc %}
-              {% include "globaltoc.html" %}
-              {% if theme_navbar_pagenav %}
-                {% include "navbartoc.html" %}
-              {% endif %}
-            {% endblock %}
-            {% if theme_navbar_sidebarrel %}
-              {% block sidebarrel %}
-                {% include "relations.html" %}
-              {% endblock %}
-            {% endif %}
-            {% block navbarextra %}
-            {% endblock %}
-            {% if theme_navbar_links %}
-              {%- for link in theme_navbar_links %}
-                <li><a href="{{ pathto(*link[1:]) }}">{{ link[0] }}</a></li>
-              {%- endfor %}
-            {% endif %}
-            {% if theme_source_link_position == "nav" %}
-              <li class="hidden-sm">{% include "sourcelink.html" %}</li>
-            {% endif %}
+            {% block navbartoc %}{% include "globaltoc.html" %}{% endblock %}
           </ul>
-
-          {% block navbarsearch %}
-            {% include "navbarsearchbox.html" %}
-          {% endblock %}
+          {% block navbarsearch %}{% include "navbarsearchbox.html" %}{% endblock %}
         </div>
     </div>
   </div>
